--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,3 +1,4 @@
+<!-- rgba(5,47,74,1) -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detector</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style2.css') }}">
 </head>
 
 <body>
@@ -21,25 +22,22 @@
                 <li><b><a class="link" href="about.html">People Counter</a></b></li>
                 <li><b><a class="link" href="about.html">Language Detector</a></b></li>
             </div>
+
         </ul>
     </nav>
+    
     <div class="header">
-        <div class="left-header">
-            <div class="box1" id="displayimage">
-                <img src="static/styles/{{reimg1}}">
-                <form action="/home"method="POST" >
-                    <input type="file" id="url" name="url">
-                    <input type="submit" id="submit" name="submit">
-                </form>
-            </div>
-        </div>
         <div class="right-header">
-            <div class="box2">
-                <img src="static/styles/{{reimg2}}">
-                
+            <div class="box2" id="output" >
+                {{sumupf}}
             </div>
         </div>
     </div>
+    <form action="/text" method="POST" class="form">
+        <input type="file" id="url" name="url">
+        <input type="submit" id="submit" name="submit">
+    </form>
+    
     <script src="{{url_for('static', filename='index.js')}}"></script>
 </body>
 
