--- a/templates/index.html
+++ b/templates/index.html
@@ -11,23 +11,24 @@
 
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label> 
+        <label class="logo">DIMITRIOS</label>
         <ul>
-                <h1>Detector</h1>
-            </li>
-            <div class="snav">
-                <li><b><a class="link" href="{{url_for('home')}}">Home</a></b></li>
-                <li><b><a class="link" href="{{url_for('text')}}">Text Summarizer</a></b></li>
-                <li><b><a class="link" href="about.html">Color Detector</a></b></li>
-                <li><b><a class="link" href="about.html">People Counter</a></b></li>
-                <li><b><a class="link" href="about.html">Language Detector</a></b></li>
-            </div>
+          <li><b><a class="link" href="{{url_for('home')}}">Home</a></b></li>
+          <li><b><a class="link" href="{{url_for('faced')}}">poeple counter</a></b><li>
+          <li><b><a class="link" href="{{url_for('text')}}">Text Summarizer</a></b><li>
+          <li><b><a class="link" href="{{url_for('color')}}">Color Detector</a></b></li>
+          <li><b><a class="link" href="{{url_for('lang')}}">Language Detector</a></b></li>
         </ul>
-    </nav>
+      </nav>
     <div class="header">
         <div class="left-header">
             <div class="box1" id="displayimage">
                 <img src="static/styles/{{reimg1}}">
-                <form action="/home"method="POST" >
+                <form action="/faced" method="POST" class="form" >
                     <input type="file" id="url" name="url">
                     <input type="submit" id="submit" name="submit">
                 </form>
